// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`neighbouring-site-access change page GET /neighbouring-site-access/change should render the change neighbouring site access page with "No" radio option checked, and no text populated in the textarea, if reasonForNeighbourVisits is null 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Will the inspector need to enter a neighbour’s land or property?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="neighbouring-site-access-radio"
                                    name="neighbouringSiteAccessRadio" type="radio" value="yes" data-aria-controls="conditional-neighbouring-site-access-radio">
                                    <label class="govuk-label govuk-radios__label" for="neighbouring-site-access-radio">Yes</label>
                                </div>
                                <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                id="conditional-neighbouring-site-access-radio">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="neighbouring-site-access-details">Enter the reason</label>
                                        <textarea class="govuk-textarea" id="neighbouring-site-access-details"
                                        name="neighbouringSiteAccess" rows="3"></textarea>
                                    </div>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="neighbouring-site-access-radio-2"
                                    name="neighbouringSiteAccessRadio" type="radio" value="no" checked>
                                    <label class="govuk-label govuk-radios__label" for="neighbouring-site-access-radio-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`neighbouring-site-access change page GET /neighbouring-site-access/change should render the change neighbouring site access page with "Yes" radio option checked, and "test neighbouring site access details" populated in the textarea, if reasonForNeighbourVisits is "test neighbouring site access details" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Will the inspector need to enter a neighbour’s land or property?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="neighbouring-site-access-radio"
                                    name="neighbouringSiteAccessRadio" type="radio" value="yes" checked data-aria-controls="conditional-neighbouring-site-access-radio">
                                    <label class="govuk-label govuk-radios__label" for="neighbouring-site-access-radio">Yes</label>
                                </div>
                                <div class="govuk-radios__conditional" id="conditional-neighbouring-site-access-radio">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="neighbouring-site-access-details">Enter the reason</label>
                                        <textarea class="govuk-textarea" id="neighbouring-site-access-details"
                                        name="neighbouringSiteAccess" rows="3">test neighbouring site access details</textarea>
                                    </div>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="neighbouring-site-access-radio-2"
                                    name="neighbouringSiteAccessRadio" type="radio" value="no">
                                    <label class="govuk-label govuk-radios__label" for="neighbouring-site-access-radio-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
